# pagi-backend-core

./: .env.example  .gitignore  README.md  docker-compose.yml
backend-go-agent-planner/: go.mod  go.sum  main.go
backend-go-agent-planner/agent/: planner.go
backend-go-agent-planner/internal/logger/: logger.go
backend-go-model-gateway/: Dockerfile  go.mod  go.sum  main.go
backend-go-model-gateway/proto/: model.pb.go  model.proto
backend-go-model-gateway/proto/proto/: model.pb.go  model_grpc.pb.go
backend-python-agent/: grpc_client.py  main.py  requirements.txt  tool_parser.py
backend-python-agent/proto/: model.proto
backend-python-memory/: main.py  memory_service.py  requirements.txt
backend-rust-sandbox/: Cargo.toml  Dockerfile
backend-rust-sandbox/src/: main.rs  tool_service.rs
docs/: PRODUCTION_READINESS_AUDIT.md
scripts/: run_all_dev.py
